# conditional_gan

./: .gitignore  hubconf.py  mnist_test.py  mnist_train.py  pyproject.toml  setup.py  test.py  train.py
conditional_gan/engine/: __init__.py  inferencer.py  tranier.py
conditional_gan/models/: __init__.py  conv_net.py  discriminator.py  discriminator_for_conv.py  discriminator_for_vanilla.py  vanilla_net.py
conditional_gan/utils/: __init__.py  checkpoint.py  common.py  envs.py  events.py  ops.py  torch_utils.py
configs/: baseline_fashion_mnist.yaml  baseline_mnist.yaml  baseline_mnist_folder.yaml  conv_mnist.yaml
datasets/: README.md
tools/: inference.py  train.py
weights/: download_weights.py
